# OOPEmailSim

./: .gitignore  CMakeLists.txt  EmailSim_UML.mdj  README.md  main
include/: Email.hpp  Inbox.hpp  User.hpp
src/: Email.cpp  Inbox.cpp  User.cpp  main.cpp
tests/: CMakeLists.txt  tests.cpp
